updated post module

--- a/src/app/components/post/newpost/newpost.component.html
+++ b/src/app/components/post/newpost/newpost.component.html
@@ -52,7 +52,7 @@
                     <label class="sr-only" for="message">post</label>
 
                             <div id="postContent" contenteditable="true"
-                            [mentionConfig]="mentionConfig" placeholder="What are you thinking?"
+                            [mentionConfig]="mentionConfig" placeholder="Please share your thoughts"
                             [mentionListTemplate]="mentionListTemplate" spellcheck="true" (keyup)="getUsers($event)"> 
                             </div>
 
