--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -2,11 +2,13 @@
 
 
 <div class="card gedf-card post-list">
-    <cdk-virtual-scroll-viewport style="height: 550px" class="all-posts" itemSize="90" (scroll)="onPostScroll($event)">
-        <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i">
-        </app-postcard>
-    </cdk-virtual-scroll-viewport>
+    <div *ngIf="posts.length > 0">
+        <cdk-virtual-scroll-viewport style="height: 550px" class="all-posts" itemSize="90" (scroll)="onPostScroll($event)">
+            <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i">
+            </app-postcard>
+        </cdk-virtual-scroll-viewport>
+    </div>
+    <div *ngIf="posts.length < 1">
+        No Post to show 
+    </div>
 </div>
-
-
-<!--<app-postcard [post]=post *ngFor="let post of posts"></app-postcard>-->
