--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -10,7 +10,10 @@
     border-radius: 5px;
     width:152px;
   }
-  
+  .vseparator{
+    margin: 5px;
+    border-right: 2px solid gray;
+  }
 body {
     margin-top: 20px;
     background-color: #e9ebee;
